src/test/deca/context/invalid/main-return.context
main-return.deca:1:
